# depthai-core-additional-examples

./: .gitmodules  CMakeLists.txt  README.md
src/: gen2_camera_face_detector_example.cpp  gen2_movenet_example.cpp  utility.cpp
